--- a/app/assets/style/_variable.scss
+++ b/app/assets/style/_variable.scss
@@ -6,11 +6,11 @@ $gray:#707070;
 $darkgray:#212529;
 
 // font
-$font-h2:4.5rem;
-$font-h3:4rem;
-$font-h4:3rem;
-$font-h5:2.25rem;
-$font-h6:1.5rem;
-$font-h7:1.25rem;
-$font-p1:1rem;
-$font-p2:0.875rem;
+$font-h2:4.5rem; //72px
+$font-h3:4rem; //64px
+$font-h4:3rem; //48px
+$font-h5:2.25rem; //36px
+$font-h6:1.5rem; //24px
+$font-h7:1.25rem;//20px
+$font-p1:1rem; //16px
+$font-p2:0.875rem; //14px
