--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -18,7 +18,7 @@
       <h1 class="py-sm-4 py-2"><a href="index.html">眼鏡電商</a></h1>
       <ul class="d-flex "> 
           <li class="nav-item "><a class=" py-sm-4 py-2 px-lg-4 px-sm-3 px-6 text-center text-white fw-rg h6 bd-white" href="#" >系列鏡框</a></li>
-          <li class="nav-item "><a class=" py-sm-4 py-2 px-lg-4 px-sm-3 px-6 text-center text-white fw-rg h6 bd-white" href="#" >門市據點</a></li>
+          <li class="nav-item "><a class=" py-sm-4 py-2 px-lg-4 px-sm-3 px-6 text-center text-white fw-rg h6 bd-white" href="location_2.html" >門市據點</a></li>
           <li class="nav-item "><a class=" py-sm-4 py-2 px-lg-4 px-sm-3 px-6 text-center text-white fw-rg h6 bd-white" href="#" >部落格</a></li>
           <li class="nav-item "><a class=" py-sm-4 py-2 px-lg-4 px-sm-3 px-6 text-center text-white fw-rg h6 bd-white" href="#" >常見問題</a></li>
       </ul>
@@ -83,6 +83,8 @@
 
   <script src="./assets/js/vendors.js"></script>
   <script src="./assets/js/all.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
