--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -35,7 +35,7 @@
               <ul class="d-sm-flex d-none fw-rg p1 mb-4 ">
                   <li class=""><a class="pr-4 text-white" href="index.html">首頁</a></li>
                   <li class=""><a class="px-4 text-white" href="#">系列鏡框</a></li>
-                  <li class=""><a class="px-4 text-white" href="#">門市據點</a></li>
+                  <li class=""><a class="px-4 text-white" href="location_2.html">門市據點</a></li>
                   <li class=""><a class="px-4 text-white" href="#">部落格</a></li>
                   <li class=""><a class="pl-4 text-white" href="#">常見問題</a></li>
               </ul>
